Assorted styling fixes to Home component
- Changed “Show More” to only show when there are more posts to show!
If not, it is not visible on the page.
- Added animation to “Show More”
- Figuring out how to add animation to last blog post element so that
when it shows, it will “fade in”.  Not complete, still working on it

--- a/src/app/home.component.css
+++ b/src/app/home.component.css
@@ -7,6 +7,13 @@
   font-size: 20px;
 }
 
+.post-list a:not(.last-post) {
+}
+
+.last-post {
+	
+}
+
 @media only screen and (min-width: 800px) { /*desktop*/
   .post-list {
     padding: 20px 40px 100px 40px;
